# lerobot-doctor

./: README.md  TEST_LOG.md  pyproject.toml
src/lerobot_doctor/: cli.py  dataset_loader.py  report.py  runner.py
src/lerobot_doctor/checks/: actions.py  anomalies.py  consistency.py  episodes.py  metadata.py  per_episode.py  portability.py  statistics.py  temporal.py  training.py  videos.py
tests/: conftest.py  test_actions.py  test_anomalies.py  test_cli.py  test_consistency.py  test_episodes.py  test_metadata.py  test_per_episode.py  test_report.py  test_runner.py  test_statistics.py  test_temporal.py  test_training.py  test_videos.py
