[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot-doctor"
version = "0.1.0"
description = "Dataset quality diagnostics for LeRobot v3 datasets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jash Shah"}]
dependencies = [
    "pyarrow>=14.0",
    "huggingface-hub>=0.20",
    "av>=11.0",
    "rich>=13.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-tmp-files>=0.0.2"]

[project.scripts]
lerobot-doctor = "lerobot_doctor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
